--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,7 +16,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; margin-top: 20px;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -34,9 +34,9 @@
 
   </div>
   
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Gustavo Haddad</a>.
-  </div> -->
+    Coded by <a href="https://github.com/gushadd">Gustavo Haddad</a>.
+  </div>
 </body>
 </html>
